k8s/order-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: order-db
          image: redis:latest
          args: ["--requirepass", "redis"]  # Set Redis password
          resources:
            limits:
              memory: "4Gi"
              cpu: "1"
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /data
          ports:
            - containerPort: 6379
      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
spec:
  selector:
    app: order-db
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
