k8s/order-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-worker-service
spec:
  selector:
    component: order-worker
  ports:
    - port: 5002
      name: http
      targetPort: 5002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-worker-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: order-worker
  template:
    metadata:
      labels:
        component: order-worker
    spec:
      containers:
        - name: order-worker
          image: gcr.io/wdmproject23-v2/order-worker2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.5"
            requests:
              memory: "128Mi"
              cpu: "0.5"
          command: ["python3"]
          args: ["/home/app/src/app.py"]
          ports:
            - containerPort: 5002
