k8s/payment-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-worker-service
spec:
  selector:
    component: payment-worker
  ports:
    - port: 5001
      name: http
      targetPort: 5001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: payment-worker
  template:
    metadata:
      labels:
        component: payment-worker
    spec:
      containers:
        - name: payment-worker
          image: gcr.io/wdmproject23-v2/payment-worker
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "128Mi"
              cpu: "0.2"
          command: ["python3"]
          args: ["/home/app/src/app.py"]
          ports:
            - containerPort: 5001
