k8s/stock-rest.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-rest-service
spec:
  selector:
    component: stock-rest
  ports:
    - port: 5000
      name: http
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-rest-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: stock-rest
  template:
    metadata:
      labels:
        component: stock-rest
    spec:
      containers:
        - name: stock-rest
          image: gcr.io/wdmproject23-v2/stock-rest-sql
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "256Mi"
              cpu: "1"
          command: ["uvicorn"]
          args: ["--host", "0.0.0.0",
                 "--port", "5000",
                 "--app-dir", "/home/app/src",
                 "app:app"]
          ports:
            - containerPort: 5000
