k8s/stock-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-worker-service
spec:
  selector:
    component: stock-worker
  ports:
    - port: 5000
      name: http
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-worker-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      component: stock-worker
  template:
    metadata:
      labels:
        component: stock-worker
    spec:
      containers:
        - name: stock-worker
          image: gcr.io/wdmproject23-v2/stock-worker-sql
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "0.5"
            requests:
              memory: "128Mi"
              cpu: "0.5"
          command: ["python3"]
          args: ["/home/app/src/app.py"]
          ports:
            - containerPort: 5000
